; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/flash/extr_flv_reader.c_flv_validate_frame_data.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/flash/extr_flv_reader.c_flv_validate_frame_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { %struct.TYPE_8__**, i64 }
%struct.TYPE_8__ = type { %struct.TYPE_7__* }
%struct.TYPE_7__ = type { i32 }

@VC_CONTAINER_SUCCESS = common dso_local global i32 0, align 4
@VC_CONTAINER_ERROR_CONTINUE = common dso_local global i32 0, align 4
@VC_CONTAINER_ERROR_CORRUPTED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_9__*, i32, i32*, i32*)* @flv_validate_frame_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @flv_validate_frame_data(%struct.TYPE_9__* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_9__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %13 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = trunc i64 %14 to i32
  %16 = icmp sge i32 %11, %15
  br i1 %16, label %17, label %27

17:                                               ; preds = %4
  %18 = load i32*, i32** %8, align 8
  %19 = load i32, i32* %18, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %17
  %22 = load i32, i32* @VC_CONTAINER_SUCCESS, align 4
  br label %25

23:                                               ; preds = %17
  %24 = load i32, i32* @VC_CONTAINER_ERROR_CONTINUE, align 4
  br label %25

25:                                               ; preds = %23, %21
  %26 = phi i32 [ %22, %21 ], [ %24, %23 ]
  store i32 %26, i32* %5, align 4
  br label %107

27:                                               ; preds = %4
  %28 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %29 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %28, i32 0, i32 0
  %30 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %29, align 8
  %31 = load i32, i32* %7, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds %struct.TYPE_8__*, %struct.TYPE_8__** %30, i64 %32
  %34 = load %struct.TYPE_8__*, %struct.TYPE_8__** %33, align 8
  %35 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %34, i32 0, i32 0
  %36 = load %struct.TYPE_7__*, %struct.TYPE_7__** %35, align 8
  %37 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  switch i32 %38, label %96 [
    i32 128, label %39
    i32 129, label %51
    i32 130, label %67
  ]

39:                                               ; preds = %27
  %40 = load i32*, i32** %8, align 8
  %41 = load i32, i32* %40, align 4
  %42 = icmp slt i32 %41, 1
  br i1 %42, label %43, label %45

43:                                               ; preds = %39
  %44 = load i32, i32* @VC_CONTAINER_ERROR_CORRUPTED, align 4
  store i32 %44, i32* %5, align 4
  br label %107

45:                                               ; preds = %39
  %46 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %47 = call i32 @_READ_U8(%struct.TYPE_9__* %46)
  %48 = load i32*, i32** %8, align 8
  %49 = load i32, i32* %48, align 4
  %50 = sub nsw i32 %49, 1
  store i32 %50, i32* %48, align 4
  br label %97

51:                                               ; preds = %27
  %52 = load i32*, i32** %8, align 8
  %53 = load i32, i32* %52, align 4
  %54 = icmp slt i32 %53, 1
  br i1 %54, label %55, label %57

55:                                               ; preds = %51
  %56 = load i32, i32* @VC_CONTAINER_ERROR_CORRUPTED, align 4
  store i32 %56, i32* %5, align 4
  br label %107

57:                                               ; preds = %51
  %58 = load i32*, i32** %8, align 8
  %59 = load i32, i32* %58, align 4
  %60 = sub nsw i32 %59, 1
  store i32 %60, i32* %58, align 4
  %61 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %62 = call i32 @_READ_U8(%struct.TYPE_9__* %61)
  %63 = icmp ne i32 %62, 1
  br i1 %63, label %64, label %66

64:                                               ; preds = %57
  %65 = load i32, i32* @VC_CONTAINER_ERROR_CONTINUE, align 4
  store i32 %65, i32* %5, align 4
  br label %107

66:                                               ; preds = %57
  br label %97

67:                                               ; preds = %27
  %68 = load i32*, i32** %8, align 8
  %69 = load i32, i32* %68, align 4
  %70 = icmp slt i32 %69, 4
  br i1 %70, label %71, label %73

71:                                               ; preds = %67
  %72 = load i32, i32* @VC_CONTAINER_ERROR_CORRUPTED, align 4
  store i32 %72, i32* %5, align 4
  br label %107

73:                                               ; preds = %67
  %74 = load i32*, i32** %8, align 8
  %75 = load i32, i32* %74, align 4
  %76 = sub nsw i32 %75, 1
  store i32 %76, i32* %74, align 4
  %77 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %78 = call i32 @_READ_U8(%struct.TYPE_9__* %77)
  %79 = icmp ne i32 %78, 1
  br i1 %79, label %80, label %82

80:                                               ; preds = %73
  %81 = load i32, i32* @VC_CONTAINER_ERROR_CONTINUE, align 4
  store i32 %81, i32* %5, align 4
  br label %107

82:                                               ; preds = %73
  %83 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %84 = call i32 @_READ_U24(%struct.TYPE_9__* %83)
  store i32 %84, i32* %10, align 4
  %85 = load i32, i32* %10, align 4
  %86 = shl i32 %85, 8
  store i32 %86, i32* %10, align 4
  %87 = load i32, i32* %10, align 4
  %88 = ashr i32 %87, 8
  store i32 %88, i32* %10, align 4
  %89 = load i32, i32* %10, align 4
  %90 = load i32*, i32** %9, align 8
  %91 = load i32, i32* %90, align 4
  %92 = add nsw i32 %91, %89
  store i32 %92, i32* %90, align 4
  %93 = load i32*, i32** %8, align 8
  %94 = load i32, i32* %93, align 4
  %95 = sub nsw i32 %94, 3
  store i32 %95, i32* %93, align 4
  br label %97

96:                                               ; preds = %27
  br label %97

97:                                               ; preds = %96, %82, %66, %45
  %98 = load i32*, i32** %8, align 8
  %99 = load i32, i32* %98, align 4
  %100 = icmp ne i32 %99, 0
  br i1 %100, label %101, label %103

101:                                              ; preds = %97
  %102 = load i32, i32* @VC_CONTAINER_SUCCESS, align 4
  br label %105

103:                                              ; preds = %97
  %104 = load i32, i32* @VC_CONTAINER_ERROR_CONTINUE, align 4
  br label %105

105:                                              ; preds = %103, %101
  %106 = phi i32 [ %102, %101 ], [ %104, %103 ]
  store i32 %106, i32* %5, align 4
  br label %107

107:                                              ; preds = %105, %80, %71, %64, %55, %43, %25
  %108 = load i32, i32* %5, align 4
  ret i32 %108
}

declare dso_local i32 @_READ_U8(%struct.TYPE_9__*) #1

declare dso_local i32 @_READ_U24(%struct.TYPE_9__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
